--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@
     margin: 0;
 }
 body{
-    
+   height: 100vh; 
 }
+
 header{
     position: sticky;
     display: flex;
@@ -16,7 +17,7 @@ header{
     top: 0;
     left: 0;
     right: 0;
-    background-color: yellow;
+    background-color: rgb(149, 201, 236);
     height: fit-content;
     padding-top: 7px;
     padding-bottom: 7px;
@@ -51,23 +52,21 @@ margin-right: 15px;
 align-items: center;
 }
 
-#navtitle h3,p{
-    margin: 0px;
-}
+
 #navtitle h3{
-    margin-bottom: 5px;
+    
 }
 header #Userlogin{
-    border: 1px solid black;
+    
     border-radius: 50%;
     height: 40px;
     aspect-ratio: 1/ 1;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 18px;
-    color: white;
-    background-color: black;
+    font-size: 20px;
+    color: rgb(10, 10, 10);
+    transform: rotate(180deg);
     cursor: pointer;
 }
 #datadiv{
@@ -80,68 +79,18 @@ header #Userlogin{
     border-radius: 10px;
     max-height: 100%;
     padding: 10px;
-    
+   
 }
 #totalandQr{
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-#totalandQr h3{
-    padding: 10px;
-    border-radius: 10px;
-}
-#QRscanner{
-display: flex;
-justify-content: center;
-align-items: center;
-flex-direction: column;
-font-size: 30px;
-cursor: pointer;
-}
-#QRscanner p{
-    font-size: 10px;
-   font-weight: bold;
-}
-#filterandsearch{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 8px;
-}
-#searchdiv{
-flex: 0 0 90%;
-}
-#filterdiv{
-font-size: 25px;
-cursor: pointer;
-}
-#searchdiv input{
-    border: 1px solid blue;
-    height: 25px;
-    padding: 5px;
-    width: 50%;
-    margin-right: 10px;
-    border-radius: 5px;
-}
-#search:focus{
-    outline: none;
-}
-#searchdiv button{
-    height: 25px;
-    padding: 4px;
-    padding-left: 6px;
-    padding-right: 6px;
-    font-weight: bold;
-    border: 1px solid gold;
-    background-color: yellow;
-    cursor: pointer;
-    border-radius: 5px;
-}
+
 .tablediv{
     margin-top: 8px;
     max-width: 100%;
-    height: calc(100% - 85.3px);
+    height: calc(100% - 34.3px);
     border: 1px solid blue;
     border-radius: 10px;
     padding: 5px;
@@ -165,11 +114,97 @@ th,td{
 tr{
     white-space: nowrap;
 }
-.Registered,.Certificate{
-padding: 8px;
-border: none;
-background-color: rgb(202, 172, 229);
-border-radius: 25px;
+
+
+#Login{
+min-height: 100%;
+width: 100%;
+border: 1px solid green;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+background: rgb(39,34,195);
+
+background: linear-gradient(90deg, rgba(39,34,195,1) 6%, rgba(40,56,198,1) 40%, rgba(45,253,230,1) 100%);
+}
+#back{
+    position: absolute;
+    background: blue;
+    width: 100%;
+    height: 25%;
+    z-index: 1;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    display: none;
+}
+.container {
+    max-width: 400px; /* Maximum width of the container */
+    width: calc(100% - 40px);
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    z-index: 2;
+    -webkit-box-shadow: 7px 10px 39px 14px rgba(56,52,56,0.55);
+-moz-box-shadow: 7px 10px 39px 14px rgba(56,52,56,0.55);
+box-shadow: 7px 10px 39px 14px rgba(56,52,56,0.55);
+}
+.container h1{
+    margin-bottom: 15px;
+}
+.form-group {
+    margin-bottom: 15px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+input[type="email"],
+input[type="text"],
+input[type="tel"],
+input[type="password"] {
+    width: 100%;
+    padding: 5px 10px 5px 10px;
+    font-size: 16px;
+    border-radius: 20px;
+    border: 1px solid #ccc;
+}
+#logineye{
+    position: absolute;
+    right: 5px;
+    bottom: 7px;
+    cursor: pointer;
+}
+#signupeye{
+    position: absolute;
+    right: 5px;
+    bottom: 7px;
+    cursor: pointer;
+}
+#signupeyeconfirm{
+    position: absolute;
+    right: 5px;
+    bottom: 7px;
+    cursor: pointer;
+}
+.submit {
+    width: 100%;
+    padding: 7px 10px 7px 10px;
+    font-size: 16px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+}
+#logsignlink{
+    text-align: center;
+    margin-top: 15px;
+}
+.hide{
+    display: none !important;
 }
 @media screen and ( max-width: 855px ){
     #navtitle h3{
@@ -200,5 +235,17 @@ border-radius: 25px;
         }
     #searchdiv input{
         width: 70%;
+    }
+    #Login{
+        justify-content: flex-start;
+        background: #f0fcff;
+    }
+    .container{
+        -webkit-box-shadow: 2px 13px 39px -15px rgba(56,52,56,1);
+    -moz-box-shadow: 2px 13px 39px -15px rgba(56,52,56,1);
+    box-shadow: 2px 13px 39px -15px rgba(56,52,56,1);
+    }
+    #back{
+        display: block;
     }
     }
